--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,3 +180,14 @@ table td:nth-child(2){
     border-radius: 8px;
     font-size: 1.5rem;
 }
+
+input[type="submit"] {
+    background-color: #0755c8;
+    color: #efefef;
+    padding: 10px;
+    border: 0 none;
+}
+
+.form {
+    padding-left: 300px;
+}
